fix: Rendering artifacts when switching projects; change: EditorSceneRenderer now lives in Editor class

--- a/TestProj/Editor/layout.ini
+++ b/TestProj/Editor/layout.ini
@@ -22,13 +22,13 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=450,174
-Size=885,482
+Pos=451,174
+Size=885,600
 Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=356,44
-Size=966,628
+Size=718,628
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65263,7 +65263,7 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,46
-Size=1322,626
+Size=1074,626
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65304,8 +65304,8 @@ Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=1324,44
-Size=276,628
+Pos=1076,44
+Size=524,628
 Collapsed=0
 DockId=0x00000006,0
 
@@ -65335,6 +65335,34 @@ Pos=356,674
 Size=773,203
 Collapsed=0
 DockId=0x00000013,1
+
+[Window][Project Settings]
+Pos=0,46
+Size=1322,626
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][##Project]
+Pos=0,46
+Size=1074,626
+Collapsed=0
+DockId=0x00000005,0
+
+[Table][0xC0682B2C,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x96241D0B,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0xD5A4F4C7,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x8B4DC7B5,4]
+RefScale=15
+Column 0  Sort=0v
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -66424,6 +66452,46 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0x977CA083,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x7DCDACAC,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x2FE2DA76,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x933D0B19,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x6A637F79,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0xA3759B49,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0xA92409AE,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x34F5FDB4,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x8B0B3619,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0xF339538F,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=354,832 Split=Y Selected=0x2E9237F7
@@ -66438,8 +66506,8 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 S
         DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,628 Split=X Selected=0xF6FF0623
             DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=1062,575 Split=X Selected=0xBDDC88E0
-              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=966,639 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
-              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=276,639 Selected=0x2B33B8C9
+              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=1074,639 CentralNode=1 HiddenTabBar=1 Selected=0xD5A292CB
+              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=524,639 Selected=0x2B33B8C9
             DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=347,575 Selected=0xFC56E895
           DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,203 Split=X Selected=0xBF096F38
             DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=773,192 Selected=0xBF096F38
